@@ -58,7 +58,13 @@ var (
 
 	CachedBlocks    []*BlockRcvd
 	CachedBlocksLen sys.SyncInt
+<<<<<<< HEAD
 	DiscardedBlocks map[BIDX]bool = make(map[BIDX]bool)
+=======
+	DiscardedBlocks map[BIDX] bool = make(map[BIDX] bool)
+
+	HeadersReceived sys.SyncInt
+>>>>>>> 
 )
 
 func AddB2G(b2g *OneBlockToGet) {
